page for add and edit

--- a/STO/View/AddNewWorkerWindow.xaml
+++ b/STO/View/AddNewWorkerWindow.xaml
@@ -1,24 +1,22 @@
-﻿<Window x:Class="STO.View.AddNewServicesWindow"
+﻿<Window x:Class="STO.View.AddNewWorkerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STO.View"
         mc:Ignorable="d"
-        Title="Добавить новую услугу" Height="300" Width="300">
+        Title="Добавить нового работника" Height="400" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Width="200" Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="Name"/>
             <TextBox Text=""/>
-            <TextBlock Text="Cost"/>
-            <TextBox Text=""/>
-            <TextBlock Text="TimeOfExecution"/>
+            <TextBlock Text="Salary"/>
             <TextBox Text=""/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Добавить услугу"/>
+        <Button Grid.Row="1" Content="Добавить работника"/>
     </Grid>
 </Window>
