--- a/STO/View/AddNewCarWindow.xaml
+++ b/STO/View/AddNewCarWindow.xaml
@@ -1,24 +1,28 @@
-﻿<Window x:Class="STO.View.AddNewServicesWindow"
+﻿<Window x:Class="STO.View.AddNewCarWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STO.View"
         mc:Ignorable="d"
-        Title="Добавить новую услугу" Height="300" Width="300">
+        Title="Добавить новую машину" Height="450" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Name"/>
+        <StackPanel Grid.Row="0" Width="200" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Make"/>
             <TextBox Text=""/>
-            <TextBlock Text="Cost"/>
+            <TextBlock Text="Model"/>
             <TextBox Text=""/>
-            <TextBlock Text="TimeOfExecution"/>
+            <TextBlock Text="CarVin"/>
+            <TextBox Text=""/>
+            <TextBlock Text="Year"/>
+            <TextBox Text=""/>
+            <TextBlock Text="Color"/>
             <TextBox Text=""/>
         </StackPanel>
-        <Button Grid.Row="1" Content="Добавить услугу"/>
+        <Button Grid.Row="1" Content="Добавить машину"/>
     </Grid>
 </Window>
