--- a/STO/View/MessageView.xaml
+++ b/STO/View/MessageView.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"/>
-        <Button Grid.Row="1" Content="Ok"/>
+        <TextBlock x:Name="MessageText" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"/>
+        <Button Grid.Row="1" Content="Ok" Click="Button_Click"/>
     </Grid>
 </Window>
